--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ Temporary Items
 .idea/dictionaries
 .idea/vcs.xml
 .idea/jsLibraryMappings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/NCHC_PythonReading.iml
